--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@
 <span id="toko7"></span><br/>
 
 <div id="app"></div>
-<script src="/app.restapi.js">
+<script src="https://raw.githubusercontent.com/fesaone/location/main/app.restapi.js">
