--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-a
+<!DOCTYPE html>
+<html>
+<head>
+  <title>My Web Page</title>
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+</head>
+<body>
 
 <span id="toko1"></span><br/>
 <span id="toko2"></span><br/>
@@ -7,6 +13,9 @@ a
 <span id="toko5"></span><br/>
 <span id="toko6"></span><br/>
 <span id="toko7"></span><br/>
+p
+  <div id="app"></div>
 
-<div id="app"></div>
-<script src="https://cdn.jsdelivr.net/gh/fesaone/location@main/app.restapi.js">
+<script src="https://cdn.jsdelivr.net/gh/fesaone/location@main/app.restapi.js"></script>
+</body>
+</html>
