--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>My Web Page</title>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/fesaone/location@main/app.restapi.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/fesaone/location@main/script.js"></script>
 </head>
 <body>
   <span id="toko1"></span><br/>
