--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   <span id="toko7"></span><br/>
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/fesaone/location@main/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/fesaone/location/script.js"></script>
 </body>
 </html>
