--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <span id="toko5"></span><br/>
   <span id="toko6"></span><br/>
   <span id="toko7"></span><br/>
-
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/fesaone/location/script.js"></script>
+  
+<div id="app"></div>
+<script src="https://cdn.jsdelivr.net/gh/fesaone/location/function.js"></script>
 </body>
 </html>
